feat: implement a new guardian name field on children (#47)
* feat: implement a new guardian name field on children
* feat: fix CI pipeline in the lint workflow
